--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -47,6 +47,7 @@ jobs:
 
  
   push_to_registry:
+    needs: build-container-LincolnAPI
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
@@ -71,7 +72,7 @@ jobs:
           context: .
           file: LincolnAPI/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: latest-dev
           labels: ${{ steps.meta.outputs.labels }}
 
    
