Should be the last time messing with this workflow

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -51,9 +51,10 @@ jobs:
         with:
           context: .
           file: LincolnAPI/Dockerfile
+          push: true
           load: true
           tags: ${{ secrets.DOCKER_USERNAME }}/pim:latest, ${{ secrets.DOCKER_USERNAME }}/pim:${{ needs.bump-version.outputs.tags }}
       -
         name: Inspect
         run: |
-          docker image inspect myimage:latest
+          docker image inspect ${{ secrets.DOCKER_USERNAME }}/pim:${{ needs.bump-version.outputs.tags }}
